# mcp-gateway

./: .gitignore  pii_filter_experiment.md
config/: wasm-filter.yaml  wasm-plugin.yaml  wasm-pvc.yaml
docs/guides/: authorization.md  register-mcp-servers.md  virtual-mcp-servers.md
golang-ext-proc-filter/: Dockerfile  ext-proc.yaml  filter.yaml  go.mod  go.sum  server.go
internal/broker/upstream/: manager.go  manager_test.go
internal/controller/: broker_router.go
internal/mcp-router/: request_handlers.go
mcf-plugin-ext-proc/: Dockerfile  mcf-plugin-ext-proc-filter.yaml  mcf-plugin-ext-proc.yaml  requirements.txt
mcf-plugin-ext-proc/src/: plugin.py
mcf-plugin-ext-proc/src/plugins/: pii_filter_plugin.py
python-ext-proc-server/: Dockerfile  README.md  pii-ext-proc-filter.yaml  pii-ext-proc.yaml  requirements.txt
python-ext-proc-server/src/: server.py
python-ext-proc-server/src/envoy/annotations/: deprecation_pb2_grpc.py  resource_pb2_grpc.py
python-ext-proc-server/src/envoy/type/: hash_policy_pb2_grpc.py  http_pb2_grpc.py  http_status_pb2_grpc.py  percent_pb2_grpc.py  range_pb2_grpc.py  semantic_version_pb2_grpc.py  token_bucket_pb2_grpc.py
python-ext-proc-server/src/udpa/annotations/: migrate_pb2.py  migrate_pb2_grpc.py  security_pb2.py  security_pb2.pyi  security_pb2_grpc.py  sensitive_pb2.py  sensitive_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py  versioning_pb2.py  versioning_pb2_grpc.py
python-ext-proc-server/src/validate/: validate_pb2_grpc.py
rust-pii-wasm-filter/: Cargo.toml  README.md
rust-pii-wasm-filter/src/: lib.rs
(+673 files in other folders)
